# PaperCut

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/: app_state.py  config.py  demo_cache.py  graph.py  main.py  pipeline.py  session_store.py
backend/chat/: chat_handler.py
backend/nodes/: node0_validator.py  node1_ingestor.py  node2_client.py  node3_client.py
backend/routes/: chat.py  health.py  pipeline.py  sessions.py
backend/schemas/: api.py  contract.py  session.py  state.py  validator.py
backend/services/: pipeline_runtime.py  pipeline_state.py  session_views.py
backend/tests/: conftest.py  test_integration.py  test_node0.py  test_node1.py  test_pipeline_api.py  test_pipeline_runtime.py  test_pipeline_state.py  test_session_views.py
backend/tools/: artifact_store.py  gcs_utils.py  gemini_client.py  model_response.py  pdf_loader.py
contracts/: architecture_blueprint_schema.json  sample_attention_is_all_you_need.json
demo/: run_demo.py
demo_cache/attention_is_all_you_need/: blueprint.json  manifest.json  node0_result.json  node2_result.json  node3_result.json
demo_cache/attention_is_all_you_need/hardware_blueprint/: bottleneck_analysis.json  fused_attention_stub.cu  hardware_blueprint_meta.json
demo_cache/attention_is_all_you_need/pytorch_scaffold/: config.yaml  dataset.py  generation_meta.json  model.py  train.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChatMessage.jsx  ChatView.jsx  CodePanel.jsx  MessageInput.jsx  PipelineProgress.jsx  Sidebar.jsx  SplashScreen.jsx  Toast.jsx  (+1 more)
nat/: __init__.py  nat_client.py  nat_config.py
nodes/: node2_pytorch_architect.py  node3_hardware_blueprint.py
tests/: test_node2.py  test_node3.py
(+1 files in other folders)
