[project]
name = "arxiv-agent"
version = "0.1.0"
description = "ArXiv Agent — Autonomous ML Research-to-Code Scaffold Assistant"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.20",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
