[project]
name = "arxiv-agent"
version = "0.1.0"
description = "ArXiv Agent — Autonomous ML Research-to-Code Scaffold Assistant"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.20",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: runs against the live NVIDIA API (requires network + API key)",
]
