[project]
name = "arxiv-agent"
version = "0.1.0"
description = "ArXiv Agent — Autonomous ML Research-to-Code Scaffold Assistant"
requires-python = ">=3.12"
dependencies = [
    # Backend (FastAPI + GCP + LangGraph)
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.43.0",
    "python-dotenv>=1.0",
    "langgraph>=1.1.0",
    "langchain-core>=1.2.0",
    "pydantic>=2.7",
    "google-genai>=1.0",
    "google-cloud-storage>=2.16",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # ML Intelligence (Nodes 2 & 3 + NAT client)
    "jsonschema>=4.20",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: runs against the live NVIDIA API (requires network + API key)",
]
